[JSC] Iterator helpers incorrectly close iterators on early errors https://bugs.webkit.org/show_bug.cgi?id=291195 rdar://148774612

Reviewed by Keith Miller and Sosuke Suzuki.

NaN / Integer checks should be done without iterator closing.
We also fix iterator helpers' closing timing for the other methods as
well.

* JSTests/stress/iterator-helper-close-timing.js: Added.
(shouldBe):
(shouldThrow):
* Source/JavaScriptCore/builtins/JSIteratorPrototype.js:

Canonical link: https://commits.webkit.org/293842@main