Source/JavaScriptCore/runtime/JSIteratorPrototype.cpp
@@ -163,8 +163,11 @@ JSC_DEFINE_HOST_FUNCTION(iteratorProtoFuncForEach, (JSGlobalObject* globalObject
 
     JSValue callbackArg = callFrame->argument(0);
     if (!callbackArg.isCallable()) {
-        iteratorClose(globalObject, thisValue);
-        RETURN_IF_EXCEPTION(scope, { });
+        {
+            auto catchScope = DECLARE_CATCH_SCOPE(vm);
+            iteratorClose(globalObject, thisValue);
+            catchScope.clearException();
+        }
         return throwVMTypeError(globalObject, scope, "Iterator.prototype.forEach requires the callback argument to be callable."_s);
     }
 
